--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,1 +1,7 @@
 spring.jackson.serialization.FAIL_ON_EMPTY_BEANS: false
+server.port: 8580
+#autologin.enabled: true
+#autologin.hostName: localhost
+#autologin.port: 10001
+#autologin.username: guest
+#autologin.password: letmein
